--- a/.npmrc
+++ b/.npmrc
@@ -1,6 +1,6 @@
 # When install package, make it version to "*"
 save-workspace-protocol = rolling
-save-prefix = ''
+save-prefix = '*'
 
 # Add common config to sub package, use public-hoist-pattern avoid some package need to be root location
 # When use npm8.x, array is not effect. see https://github.com/pnpm/pnpm/issues/5347
