--- a/packages/models/package/package.json
+++ b/packages/models/package/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@eo-cli/exec",
+  "name": "@eo-cli/package",
   "version": "0.0.0",
-  "description": "🚀 The package offer exec for @eo-cli!",
+  "description": "🚀 The package offer package model for @eo-cli!",
   "type": "module",
   "keywords": [
     "cli",
@@ -12,9 +12,10 @@
     "changesets",
     "vite",
     "vitest",
-    "exec"
+    "models",
+    "package model"
   ],
-  "homepage": "https://github.com/eopol/eo-cli/blob/master/packages/cli#readme",
+  "homepage": "https://github.com/eopol/eo-cli/blob/master/packages/models/package#readme",
   "bugs": {
     "url": "https://github.com/eopol/eo-cli/issues"
   },
@@ -36,7 +37,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/eopol/eo-cli.git",
-    "directory": "packages/cli"
+    "directory": "packages/models/package"
   },
   "scripts": {
     "build": "rimraf dist && tsup --config ./build.config.ts",
@@ -48,7 +49,7 @@
     "clean:deps": "rimraf node_modules"
   },
   "dependencies": {
-    "commander": "^10.0.0"
+    "@eo-cli/utils": "workspace:*"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
