feat(commands,constants,core,models,utils): :sparkles: add dynamic install npm package

--- a/packages/core/exec/package.json
+++ b/packages/core/exec/package.json
@@ -49,6 +49,7 @@
     "clean:deps": "rimraf node_modules"
   },
   "dependencies": {
+    "@eo-cli/constants": "workspace:*",
     "@eo-cli/package": "workspace:*",
     "@eo-cli/utils": "workspace:*"
   },
