--- a/packages/models/package/package.json
+++ b/packages/models/package/package.json
@@ -49,7 +49,8 @@
     "clean:deps": "rimraf node_modules"
   },
   "dependencies": {
-    "@eo-cli/utils": "workspace:*"
+    "@eo-cli/utils": "workspace:*",
+    "npminstall": "^7.4.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
