--- a/packages/commands/init/package.json
+++ b/packages/commands/init/package.json
@@ -48,6 +48,10 @@
     "clean:cache": "rimraf .turbo && rimraf dist",
     "clean:deps": "rimraf node_modules"
   },
+  "dependencies": {
+    "@eo-cli/command": "workspace:*",
+    "@eo-cli/utils": "workspace:*"
+  },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "rimraf": "^4.1.1",
