--- a/packages/models/command/package.json
+++ b/packages/models/command/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@eo-cli/cli",
+  "name": "@eo-cli/command",
   "version": "0.0.0",
-  "description": "🚀 The package offer cli core for @eo-cli!",
+  "description": "🚀 The package offer command model for @eo-cli!",
   "type": "module",
   "keywords": [
     "cli",
@@ -12,10 +12,10 @@
     "changesets",
     "vite",
     "vitest",
-    "core",
-    "core cli"
+    "models",
+    "command model"
   ],
-  "homepage": "https://github.com/eopol/eo-cli/blob/master/packages/core/cli#readme",
+  "homepage": "https://github.com/eopol/eo-cli/blob/master/packages/models/command#readme",
   "bugs": {
     "url": "https://github.com/eopol/eo-cli/issues"
   },
@@ -32,15 +32,12 @@
     },
     "./*": "./*"
   },
-  "bin": {
-    "eo-cli": "./bin/index.js"
-  },
   "types": "./dist/index.d.ts",
   "sideEffects": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/eopol/eo-cli.git",
-    "directory": "packages/core/cli"
+    "directory": "packages/models/command"
   },
   "scripts": {
     "build": "rimraf dist && tsup --config ./build.config.ts",
@@ -53,17 +50,8 @@
   },
   "dependencies": {
     "@eo-cli/constants": "workspace:*",
-    "@eo-cli/exec": "workspace:*",
-    "@eo-cli/init": "workspace:*",
-    "@eo-cli/utils": "workspace:*",
-    "@types/import-local": "^3.1.0",
-    "@types/root-check": "^1.0.0",
-    "@types/user-home": "^2.0.0",
-    "commander": "^10.0.0",
-    "dayjs": "^1.11.7",
-    "dotenv": "^16.0.3",
-    "import-local": "^3.1.0",
-    "root-check": "^2.0.0"
+    "@types/fs-extra": "^11.0.1",
+    "fs-extra": "^11.1.0"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
