feat: :sparkles: complete command/init dev

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -53,6 +53,7 @@
     "chalk": "^5.2.0",
     "consola": "^2.15.3",
     "find-up": "^6.3.0",
+    "ora": "^6.1.2",
     "semver": "^7.3.8"
   },
   "devDependencies": {
