--- a/packages/commands/init/package.json
+++ b/packages/commands/init/package.json
@@ -50,7 +50,17 @@
   },
   "dependencies": {
     "@eo-cli/command": "workspace:*",
-    "@eo-cli/utils": "workspace:*"
+    "@eo-cli/constants": "workspace:*",
+    "@eo-cli/package": "workspace:*",
+    "@eo-cli/utils": "workspace:*",
+    "@liuli-util/fs-extra": "^0.1.0",
+    "@types/ejs": "^3.1.2",
+    "@types/inquirer": "^9.0.3",
+    "@types/semver": "^7.3.13",
+    "ejs": "^3.1.8",
+    "fast-glob": "^3.2.12",
+    "inquirer": "^9.1.4",
+    "semver": "^7.3.8"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
