--- a/packages/models/command/package.json
+++ b/packages/models/command/package.json
@@ -49,9 +49,7 @@
     "clean:deps": "rimraf node_modules"
   },
   "dependencies": {
-    "@eo-cli/constants": "workspace:*",
-    "@types/fs-extra": "^11.0.1",
-    "fs-extra": "^11.1.0"
+    "@eo-cli/constants": "workspace:*"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
