--- a/packages/models/package/package.json
+++ b/packages/models/package/package.json
@@ -50,8 +50,7 @@
   },
   "dependencies": {
     "@eo-cli/utils": "workspace:*",
-    "@types/fs-extra": "^11.0.1",
-    "fs-extra": "^11.1.0",
+    "@liuli-util/fs-extra": "^0.1.0",
     "npminstall": "^7.4.1"
   },
   "devDependencies": {
