docs: 📝 add changelogs for 63610c4 [skip ci]

--- a/.changelogrc
+++ b/.changelogrc
@@ -1,1 +1,1 @@
-{}
+{"**@eo-cli/utils** `v0.1.1`":["- change npm register \n"],"**@eo-cli/constants** `v0.1.1`":["- change npm register \n"],"**@eo-cli/cli** `v0.1.1`":["- change npm register \n"],"**@eo-cli/command** `v0.1.1`":["- change npm register \n"],"**@eo-cli/exec** `v0.1.1`":["- change npm register \n"],"**@eo-cli/init** `v0.1.1`":["- change npm register \n"],"**@eo-cli/package** `v0.1.1`":["- change npm register \n"]}
