--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
     "test": "turbo run test",
     "clean": "run-s clean:**",
     "clean:workspace": "turbo run clean",
-    "clean:cache": "turbo run clean:cache",
     "clean:root-cache": "rimraf .turbo && rimraf pnpm-lock.yaml && rimraf node_modules",
+    "clean-pkg-cache": "turbo run clean:cache",
     "lint": "turbo run lint",
     "format": "turbo run lint:prettier",
     "commit": "czg",
